fixed photo alignment and size

--- a/style.css
+++ b/style.css
@@ -1,2 +1,1 @@
 .fig {text-align: center;}
-.aled {color: #00FF00;}
